--- a/.github/workflows/build-kernel-op9r.yml
+++ b/.github/workflows/build-kernel-op9r.yml
@@ -1,4 +1,4 @@
-name: Build Kernel
+name: Build Kernel OP9R
 on:
 
   workflow_dispatch:
@@ -257,6 +257,8 @@ jobs:
     - name: Check a kernel output files
       run: |
        cd $GITHUB_WORKSPACE/kernel_workspace
+       echo "list boot dir"
+       ls -alhF android-kernel/out/arch/${{ env.ARCH }}/boot/*
        if [ -f android-kernel/out/arch/${{ env.ARCH }}/boot/${{ env.KERNEL_IMAGE_NAME }} ]; then
            echo "CHECK_FILE_IS_OK=true" >> $GITHUB_ENV
        else
