--- a/config-op9r.env
+++ b/config-op9r.env
@@ -1,4 +1,4 @@
-CONFIG_ENV=config.env
+CONFIG_ENV=config-op9r.env
 
 KERNEL_SOURCE=https://github.com/OnePlusOSS/android_kernel_oneplus_sm8250
 KERNEL_SOURCE_BRANCH=oneplus/SM8250_R_11.0_9R
